WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45176
-webkit-box-shadow:inset does not animate transform as an inset shadow
https://bugs.webkit.org/show_bug.cgi?id=45176
Summary
-webkit-box-shadow:inset does not animate transform as an inset shadow
ali robertson
Reported
2010-09-03 08:19:16 PDT
Created
attachment 66498
[details]
a little bit of simple HTML which can be used to demonstrate the problem The bug is simple: the animation ignores 'inset' until it is complete. The inset shadow appears outside the element until the animation is complete. At that point, the shadow suddenly switches to appear inside the element. Please note that I am not an expert at this stuff and I have not checked the rest of the animations. This bug may require some further discussion? Tested on Chrome canary build (nightly) 3-sept-2010
Attachments
a little bit of simple HTML which can be used to demonstrate the problem
(322 bytes, text/html)
2010-09-03 08:19 PDT
,
ali robertson
no flags
Details
Patch
(6.57 KB, patch)
2011-04-11 21:01 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-02-24 22:59:39 PST
It's not clear to me what to do when animating between different shadow styles (inset vs. non-inset).
Simon Fraser (smfr)
Comment 2
2011-04-11 21:01:13 PDT
Created
attachment 89154
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-04-11 21:15:20 PDT
http://trac.webkit.org/changeset/83555
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug